@@ -3,6 +3,8 @@
 2018/
     * fixed #35061: use guid for uniqueness, when available.
       (thanks to avbidder)
+    * improved #58422: XML::FeedPP cannot be subclassed.
+    * remove useless XML::FeedPP::Common layer
 
 2011/05/09 (0.45_01) ** DEVELOPER RELEASE
     * supports subclassing. t/47_subclass_content.t added.
